add freight in transit and delivered in requirement html

--- a/requirement.html
+++ b/requirement.html
@@ -302,22 +302,19 @@
                     <div class="list">
                         <h5>User</h5>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet metus quis eros elementum, non eleifend eros gravida.
-                                Cras volutpat ligula et metus volutpat, et commodo est faucibus.
+                            <li>Courier
+                                <br>Likes the UI with a simple look with the use of icons that are easy to used to make it easier for Courier to record track points. 
+								Also, a neat display to choose which job to do first.
                             </li>
-                            <li>Nulla vel ligula sollicitudin, maximus purus id, tempus ante.
-                                <br>blablabla
+                            <li>Carrier Admin Officers
+                                <br>Likes the UI with a simple look. Carrier admin officers also need a UI with an organized design to make their work easier, as well as a display design that makes it easier to see which work needs to come first, or change tasks with other Carrier admin officers.
                             </li>
                             <span id="more-4-1">
-                                <li>Donec nec mauris condimentum, efficitur magna ac, faucibus ex
-                                    <br>blablabla
+                                <li>Client Liaison
+                                    <br>Likes the UI with a simple and well-organized interface to make work easier, as well as a display design that made it easy to reply to questions asked by customers.
                                 </li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    <br>blablabla
-                                </li>
-                                <li>Nulla consectetur lorem et finibus blandit
-                                    <br>blablabla
+                                <li>PO Manager
+                                    <br>Likes the organized UI and the contrast between one button and another to differentiate the work window as it needed to do some of the work that was already available. Also, a simple UI for creating acceptance certificates.
                                 </li>
                             </span>
 
@@ -327,30 +324,22 @@
                     <div class="list">
                         <h5>Task Description</h5>
                         <ul>
-                            <li>Donec nec mauris condimentum, efficitur magna ac, faucibus ex
-                                <br>blablabla
-                            </li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                <br>blablabla
-                            </li>
+                            <li>The Freight in Transit sub-process is carried out in parallel with the Payment sub-process.</li>
+<li>A delivery truck may visit several destinations and they may designate some of their track points.</li>
+<li>The Courier, which records the arrival and departure times of the trucks, issues track point notifications.</li>
                             <span id="dots-4-1"></span>
                             <span id="more-4-2">
-                                <li>Nulla consectetur lorem et finibus blandit
-                                    <br>blablabla
-                                </li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    <br>blablabla
-                                </li>
-                                <li>Nulla vel ligula sollicitudin, maximus purus id, tempus ante.
-                                    <br>blablabla
-                                </li>
+                                <li>Carrier Admin Officers need to record a Trackpoint Order Entry for each track point, which contains a report for that Trackpoint.</li>
+<li>They can log order entries in parallel as long as Carrier Admin Officers are available to work on the entries.</li>
+<li>While entries are being recorded, customer inquiries need to be handled by the Client Liaison.</li>
+<li>After the transit is complete, the PO Manager creates an Acceptance Certificate, which shows that they have physically sent the shipment.</li>
                             </span>
                         </ul>
                         <a href="#" onclick="readMoreFunction('dots-4-1', 'more-4-1', 'more-4-2', 'readMoreClick-4-1')" id="readMoreClick-4-1">Read More</a>
                     </div>
 
                     <h5 class="hta-text">HTA</h5>
-                    <img id="hta-4" src="assets/images/dummy-hta.png" onclick="enlargeImage('target-4', 'hta-4', 'large-hta-4')">
+                    <img id="hta-4" src="assets/images/tasks/hta-freight-transit.png" onclick="enlargeImage('target-4', 'hta-4', 'large-hta-4')">
 
                     <!-- The Modal -->
                     <div id="target-4" class="modal">
@@ -374,22 +363,12 @@
                     <div class="list">
                         <h5>User</h5>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis imperdiet metus quis eros elementum, non eleifend eros gravida.
-                                Cras volutpat ligula et metus volutpat, et commodo est faucibus.
-                            </li>
-                            <li>Nulla vel ligula sollicitudin, maximus purus id, tempus ante.
-                                <br>blablabla
+                            <li>Client Liaison
+							<br>Likes the UI with a simple and well-organized interface to make work easier, as well as a display design that made it easy to reply to questions asked by customers.
                             </li>
                             <span id="more-5-1">
-                                <li>Donec nec mauris condimentum, efficitur magna ac, faucibus ex
-                                    <br>blablabla
-                                </li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    <br>blablabla
-                                </li>
-                                <li>Nulla consectetur lorem et finibus blandit
-                                    <br>blablabla
+                                <li>Senior Supply Officer
+								<br>Likes the UI with a comfortable appearance for reading large numbers of documents. As well as a display design that makes it easy to see which work needs to come first.
                                 </li>
                             </span>
 
@@ -399,30 +378,20 @@
                     <div class="list">
                         <h5>Task Description</h5>
                         <ul>
-                            <li>Donec nec mauris condimentum, efficitur magna ac, faucibus ex
-                                <br>blablabla
-                            </li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                <br>blablabla
-                            </li>
+                            <li>After delivery of the goods, the client may apply for a Return of Goods or may wish to file a Loss or Damage Claim.</li>
+<li>This Return Document, or Loss or Damage Claim, is entered into the system by the Client Liaison at the request of the client.</li>
+<li>If they receive no client communication within a certain period after delivery, the Order Fulfillment process is complete.</li>
                             <span id="dots-5-1"></span>
                             <span id="more-5-2">
-                                <li>Nulla consectetur lorem et finibus blandit
-                                    <br>blablabla
-                                </li>
-                                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    <br>blablabla
-                                </li>
-                                <li>Nulla vel ligula sollicitudin, maximus purus id, tempus ante.
-                                    <br>blablabla
-                                </li>
+                                <li>The Senior Supply Officer must approve requests for returns.</li>
+<li>If approved, process on Return Management. The same applies to claims for loss or damage.</li>
                             </span>
                         </ul>
                         <a href="#" onclick="readMoreFunction('dots-5-1', 'more-5-1', 'more-5-2', 'readMoreClick-5-1')" id="readMoreClick-5-1">Read More</a>
                     </div>
 
                     <h5 class="hta-text">HTA</h5>
-                    <img id="hta-5" src="assets/images/dummy-hta.png" onclick="enlargeImage('target-5', 'hta-5', 'large-hta-5')">
+                    <img id="hta-5" src="assets/images/tasks/hta-freight-delivered.png" onclick="enlargeImage('target-5', 'hta-5', 'large-hta-5')">
 
                     <!-- The Modal -->
                     <div id="target-5" class="modal">
